# llm-quickcheck

./: .gitignore  README.md  benchmark.py  config.yaml  pyproject.toml  requirements.txt
grader/: llm_judge.py
llm_quickcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: hard_code.py  hard_math.py  medium_code.py  medium_math.py  sudoku.py  tool_calling.py  trap_question.py
