[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-quickcheck"
version = "0.1.0"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
quickcheck = "benchmark:main"

[tool.setuptools]
py-modules = ["benchmark"]
packages = ["tests", "grader"]
